ListView added to wallets page.

--- a/myWalletXAML/myWalletXAML/MainPage.xaml
+++ b/myWalletXAML/myWalletXAML/MainPage.xaml
@@ -11,7 +11,7 @@
     
     <NavigationPage Title="myWallets">
         <x:Arguments>
-            <local:WalletsPage />
+            <local:WalletsListPage />
         </x:Arguments>
     </NavigationPage>
     <NavigationPage Title="Settings">
